Update my notebook with comment explanations

--- a/source code/Joe_notebook.ipynb
+++ b/source code/Joe_notebook.ipynb
@@ -3,9 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "#Author: Joe Alsko\n",
+    "#This notebook is used to find highest ride frequency days per community area and tip ratios per community area\n",
+    "\n",
     "# %pylab inline\n",
     "import math\n",
     "import pandas as pd\n",
@@ -13,8 +18,6 @@
     "import shapefile as shp\n",
     "import matplotlib.pylab as plt\n",
     "import matplotlib as mpl\n",
-    "from bokeh.plotting import figure\n",
-    "from bokeh.io import output_file, show\n",
     "from dateutil.parser import parse\n",
     "import time\n",
     "from scipy import stats\n",
@@ -425,63 +428,8 @@
     "    dfYear.append(mo)\n",
     "\n",
     "cleaned_2016 = pd.concat(dfYear, axis=0, join='outer', ignore_index=True)\n",
-    "# cleaned_2016 = pd.concat(dfYear, ignore_index=True)\n",
-    "#cleaned_2016 = cleaned_2016.drop('Unnamed: 0', 1)\n",
     "cleaned_2016.info()\n",
-    "cleaned_2016.head(20)\n",
-    "# cleaned_2016.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "aprjune = pd.read_csv('cleaned_chicago_taxi_trips_2016_04_06.csv')\n",
-    "aprjune.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "aprjune.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "noCash = cleaned_2016[cleaned_2016.payment_type != 'Cash']\n",
-    "#emptyTips = aprjune[aprjune.tips == 0]\n",
-    "#aprjune = aprjune[aprjune.fare != 0]\n",
-    "\n",
-    "#aprjune.count()\n",
-    "#emptyTips.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "aprjune['tips'].median()"
+    "cleaned_2016.head(20)\n"
    ]
   },
   {
@@ -720,16 +668,16 @@
     }
    ],
    "source": [
+    "#Add month and day attributes to dataset for later analysis\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
-    "print (str(len(cleaned_2016.index)))\n",
-    "count = 0\n",
-    "date = [\"\"]\n",
+    "\n",
     "start = time.time()\n",
     "\n",
-    "\n",
+    "#method for getting month number from timestamp\n",
     "def getMonth(row):\n",
     "    return \"m\" + row['trip_start_timestamp'].split(\"-\")[1]\n",
     "\n",
+    "#method for getting day number from timestamp\n",
     "def getDay(row):\n",
     "    return \"d\" + row['trip_start_timestamp'].split(\"-\")[2].split(\" \")[0]\n",
     "\n",
@@ -737,9 +685,6 @@
     "cleaned_2016['day'] = cleaned_2016.apply(getDay,axis=1)\n",
     "\n",
     "print(\"Finished evaluating in \" + str(time.time()-start) + \" seconds\")\n",
-    "#date = row['trip_start_timestamp'].split(\"-\")\n",
-    "#row['month'] = 0\n",
-    "#row['day'] = 0\n",
     "    \n",
     "cleaned_2016.head(10)"
    ]
@@ -1142,51 +1087,9 @@
     }
    ],
    "source": [
+    "#Build separate dataset with just top 3 community areas\n",
     "topAreas = cleaned_2016[cleaned_2016.pickup_community_area.isin([8.0,28.0,32.0])]\n",
     "topAreas.head(20)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(frozenset({32.0, 56.0}), 107942),\n",
-       " (frozenset({8.0, 56.0}), 139746),\n",
-       " (frozenset({24.0, 32.0}), 148142),\n",
-       " (frozenset({6.0, 7.0}), 169686),\n",
-       " (frozenset({6.0, 32.0}), 207092),\n",
-       " (frozenset({7.0, 32.0}), 226189),\n",
-       " (frozenset({8.0, 33.0}), 259442),\n",
-       " (frozenset({32.0, 33.0}), 274183),\n",
-       " (frozenset({8.0, 24.0}), 303845),\n",
-       " (frozenset({32.0, 76.0}), 342740),\n",
-       " (frozenset({6.0, 8.0}), 391833),\n",
-       " (frozenset({8.0, 76.0}), 453597),\n",
-       " (frozenset({7.0, 8.0}), 475912),\n",
-       " (frozenset({28.0, 32.0}), 814120),\n",
-       " (frozenset({8.0, 28.0}), 899440),\n",
-       " (frozenset({8.0, 32.0}), 2281451)]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "area_tuples = cleaned_2016[['pickup_community_area', 'dropoff_community_area']].apply(tuple, axis=1)\n",
-    "relim_area_input = itemmining.get_relim_input(area_tuples)\n",
-    "area_report = itemmining.relim(relim_area_input, min_support=100000)\n",
-    "cleaned_area_report = {}\n",
-    "for s in area_report.keys():\n",
-    "    if len(s) >= 2:\n",
-    "        cleaned_area_report[s] = area_report[s]\n",
-    "\n",
-    "sorted(cleaned_area_report.items(), key=lambda x:x[1])"
    ]
   },
   {
@@ -2206,9 +2109,10 @@
     }
    ],
    "source": [
+    "#Get frequent sets of month/day and community area\n",
     "date_tuples  = topAreas[['month', 'day', 'pickup_community_area']].apply(tuple, axis=1)\n",
     "relim_input = itemmining.get_relim_input(date_tuples)\n",
-    "report = itemmining.relim(relim_input, min_support=5000)\n",
+    "report = itemmining.relim(relim_input, min_support=5000) #Relim frequent itemset algorithm\n",
     "report"
    ]
   },
@@ -2536,15 +2440,28 @@
     }
    ],
    "source": [
-    "cleaned_report = {8.0:{}, 32.0:{}, 28.0:{}}\n",
+    "#Method for viewing sorted results from frequent itemset above per community area\n",
+    "cleaned_report = {8.0:{}, 32.0:{}, 28.0:{}} #Numbers of community areas map to dictionaries\n",
     "for s in report.keys():\n",
-    "    if len(s) >= 3:\n",
+    "    if len(s) >= 3: #Relim algorithm returns itemsets of any length, so we need to only get 3-long sets\n",
     "        for k in cleaned_report.keys():\n",
     "            if k in s:\n",
     "                cleaned_report[k][s] = report[s]\n",
     "                break;\n",
-    "#        cleaned_report[s] = report[s]\n",
-    "sorted(cleaned_report[32.0].items(), key=lambda x:x[1])"
+    "                \n",
+    "sorted(cleaned_report[32.0].items(), key=lambda x:x[1]) #Show sorted frequent itemsets for community area 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Get all transactions that didn't use cash (since tips aren't recorded for cash)\n",
+    "noCash = cleaned_2016[cleaned_2016.payment_type != 'Cash']"
    ]
   },
   {
@@ -2556,6 +2473,7 @@
    "outputs": [],
    "source": [
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
+    "#Generate tip/fare ratio value for each transaction (for easier analysis later on)\n",
     "noCash['tip_fare_ratio'] = noCash['tips']/noCash['fare']"
    ]
   },
@@ -2567,9 +2485,10 @@
    },
    "outputs": [],
    "source": [
-    "tips_dropoff = noCash.groupby(['dropoff_community_area'], as_index=True)['tips']#.agg(['median','count']) #max=8.95\n",
-    "tfr_pickup = noCash.groupby(['pickup_community_area'], as_index=True)['tip_fare_ratio']#.agg(['median','count']) #max=.2727\n",
-    "tfr_dropoff = noCash.groupby(['dropoff_community_area'], as_index=True)['tip_fare_ratio']#.agg(['median','count']) #max=.25"
+    "#Groups between plain tip amounts/dropoff area, tip-fare ratio/pickup area, and tip-fare ratio/dropoff area\n",
+    "tips_dropoff = noCash.groupby(['dropoff_community_area'], as_index=True)['tips'] #max=8.95\n",
+    "tfr_pickup = noCash.groupby(['pickup_community_area'], as_index=True)['tip_fare_ratio'] #max=.2727\n",
+    "tfr_dropoff = noCash.groupby(['dropoff_community_area'], as_index=True)['tip_fare_ratio'] #max=.25"
    ]
   },
   {
@@ -3087,6 +3006,7 @@
     }
    ],
    "source": [
+    "#To run this, the groupBy's above must have .agg applied to them\n",
     "tfr_pickup.sort_values(by=['count'], ascending=False) #dropoff-max=1816416 #pickup-max=2096837"
    ]
   },
@@ -3149,25 +3069,28 @@
     }
    ],
    "source": [
-    "sf = shp.Reader(\"community_areas.shp\")\n",
+    "#Main map painter cell\n",
+    "sf = shp.Reader(\"community_areas.shp\") #Shapefile for Chicago community areas\n",
     "\n",
-    "plt.figure(figsize=(12,12))\n",
-    "cmap = plt.get_cmap('inferno')\n",
-    "norm = mpl.colors.Normalize(vmin=0,vmax=8.95)\n",
-    "for shape in sf.shapeRecords():\n",
+    "plt.figure(figsize=(12,12)) #Keep figures square\n",
+    "cmap = plt.get_cmap('inferno') #Color map palette\n",
+    "norm = mpl.colors.Normalize(vmin=0,vmax=8.95) #Normalization function for plain color normalization\n",
+    "\n",
+    "for shape in sf.shapeRecords(): #Loop through each region in the shapefile\n",
     "    x = [i[0] for i in shape.shape.points[:]]\n",
     "    y = [i[1] for i in shape.shape.points[:]]\n",
-    "    plt.plot(x,y,color=\"White\")\n",
-    "    if int(shape.record[0]) in tips_dropoff.groups:\n",
-    "        if tips_dropoff.get_group(int(shape.record[0])).mean() <= 0:\n",
+    "    plt.plot(x,y,color=\"White\") #Draw white line around region\n",
+    "    if int(shape.record[0]) in tips_dropoff.groups: #If region number exists in dataset\n",
+    "        if tips_dropoff.get_group(int(shape.record[0])).mean() <= 0: #If value for region is negative or zero, paint black\n",
     "            plt.fill(x,y,color=cmap(0))\n",
-    "        else:\n",
+    "        else: #Otherwise, fill region with color mapped to median value for region\n",
     "            plt.fill(x,y,color=cmap(norm(tips_dropoff.get_group(int(shape.record[0])).median())))\n",
     "    else:\n",
-    "        plt.fill(x,y,color=cmap(0))\n",
+    "        plt.fill(x,y,color=cmap(0)) #If region doesn't exist, fill black\n",
     "plt.title('Median Tip Amounts by Dropoff Community', fontsize=20)\n",
     "plt.axis('off')\n",
     "\n",
+    "#Set up colorbar for plot\n",
     "sm = plt.cm.ScalarMappable(cmap=cmap, norm=norm)\n",
     "sm.set_array([])\n",
     "cbar=plt.colorbar(sm)\n",
@@ -3222,7 +3145,8 @@
     "\n",
     "plt.figure(figsize=(12,12))\n",
     "#cmap = plt.get_cmap('inferno')\n",
-    "norm = mpl.colors.LogNorm(vmin=1,vmax=1816416)\n",
+    "norm = mpl.colors.LogNorm(vmin=1,vmax=1816416)  #Since rides are so focused in downtown area, I use a Log normalization\n",
+    "                                                #to show differences in rides in other less used areas\n",
     "for shape in sf.shapeRecords():\n",
     "    x = [i[0] for i in shape.shape.points[:]]\n",
     "    y = [i[1] for i in shape.shape.points[:]]\n",
@@ -3277,6 +3201,7 @@
    },
    "outputs": [],
    "source": [
+    "#Outline of how to create Chicago map\n",
     "sf = shp.Reader(\"community_areas.shp\") #shp file needed as well as dbf file of same name\n",
     "plt.figure(figsize=(12,12))\n",
     "cmap = plt.get_cmap('magma') #color scheme name\n",
